Hadoop Change Log

Release 0.23.8 - UNRELEASED
  
  INCOMPATIBLE CHANGES
  
  NEW FEATURES
  
  IMPROVEMENTS
  
  OPTIMIZATIONS
 
  BUG FIXES

Release 0.23.7 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-8849. FileUtil#fullyDelete should grant the target directories +rwx
    permissions (Ivan A. Veselovsky via bobby)
 
    HADOOP-9216. CompressionCodecFactory#getCodecClasses should trim the
    result of parsing by Configuration. (Tsuyoshi Ozawa via todd)

    HADOOP-9067. provide test for LocalFileSystem.reportChecksumFailure
    (Ivan A. Veselovsky via bobby)

    HADOOP-9253. Capture ulimit info in the logs at service start time.
    (Arpit Gupta via tgraves)
 
    HADOOP-8075. Lower native-hadoop library log from info to debug.
    (Hızır Sefa İrken via eli)

    HADOOP-9336. Allow UGI of current connection to be queried. (Daryn Sharp
    via kihwal)

    HADOOP-9352. Expose UGI.setLoginUser for tests (daryn)

    HADOOP-9209. Add shell command to dump file checksums (Todd Lipcon via
    jeagles)

    HADOOP-9374. Add tokens from -tokenCacheFile into UGI (daryn)

    HADOOP-7358. Improve log levels when exceptions caught in RPC handler
    (Todd Lipcon via shv)

    HADOOP-8711. IPC Server supports adding exceptions for which
    the message is printed and the stack trace is not printed to avoid chatter.
    (Brandon Li via Suresh)

    HADOOP-9379. capture the ulimit info after printing the log to the 
    console. (Arpit Gupta via suresh)

  OPTIMIZATIONS

    HADOOP-9147. Add missing fields to FIleStatus.toString.
    (Jonathan Allen via suresh)

    HADOOP-8462. Native-code implementation of bzip2 codec. (Govind Kamat via
    jlowe)

  BUG FIXES

    HADOOP-8157. Fix race condition in Configuration that could cause spurious
    ClassNotFoundExceptions after a GC. (todd)

    HADOOP-7886. Add toString to FileStatus (SreeHari via tgraves)

    HADOOP-9155. FsPermission should have different default value, 777 for 